fix contacts block, align digital in rate block, add bg for body

--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -3,6 +3,7 @@ html
 
 body 
   +regular 
+  background-color: #000
 
 h2 
   +bold
