--- a/sass/blocks/_rate.sass
+++ b/sass/blocks/_rate.sass
@@ -133,7 +133,6 @@
                     margin-left: 10px
             li::before 
                 position: relative
-                display: inline-block
                 float: left
                 +bold 
                 font-size: 12px
@@ -144,6 +143,11 @@
                 border-radius: 50%
                 color: #000000
                 background-color: $gold
+                display: flex
+                align-items: center
+                justify-content: center
+
+
 
 .img-slice
    border-image-slice: 5 fill 10 10% 10
